[gd_scene load_steps=18 format=2]

[ext_resource path="res://input/onscreencontrols/touchscreen_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://input/onscreen_controls.gd" type="Script" id=2]
[ext_resource path="res://input/onscreencontrols/Sprites/lineLight/lineLight25.png" type="Texture" id=3]
[ext_resource path="res://input/onscreencontrols/Sprites/lineLight/lineLight23.png" type="Texture" id=4]
[ext_resource path="res://input/onscreencontrols/Sprites/lineLight/lineLight24.png" type="Texture" id=5]
[ext_resource path="res://input/onscreencontrols/Sprites/shadedLight/shadedLight27.png" type="Texture" id=6]
[ext_resource path="res://input/onscreencontrols/Sprites/shadedLight/shadedLight26.png" type="Texture" id=7]
[ext_resource path="res://input/onscreencontrols/Sprites/shadedLight/shadedLight25.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="onscreen_controls" type="CanvasLayer"]
layer = 0
script = ExtResource( 2 )

[node name="left_button" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 86, 593 )

[node name="button" parent="left_button" index="0"]
position = Vector2( 23, -97 )
action = "steer_left"

[node name="sprite" parent="left_button" index="1"]
position = Vector2( 60, -60 )

[node name="right_button" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 215, 593 )

[node name="button" parent="right_button" index="0"]
position = Vector2( 96, -97 )
action = "steer_right"

[node name="sprite" parent="right_button" index="1"]
position = Vector2( 60, -60 )
frames = SubResource( 3 )

[node name="accelerate_button" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 939, 594 )

[node name="button" parent="accelerate_button" index="0"]
position = Vector2( -24, -96 )
passby_press = false
action = "accelerate"

[node name="sprite" parent="accelerate_button" index="1"]
position = Vector2( -60, -60 )
frames = SubResource( 6 )

[node name="brake_button" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 806, 595 )

[node name="button" parent="brake_button" index="0"]
position = Vector2( -95, -97 )
passby_press = false
action = "brake"

[node name="sprite" parent="brake_button" index="1"]
position = Vector2( -60, -60 )
frames = SubResource( 11 )

[editable path="left_button"]
[editable path="right_button"]
[editable path="accelerate_button"]
[editable path="brake_button"]
